# src/SamaEcole.Application/Exams/Commands/AssignExamCenter/AssignExamCenterCommandValidator.cs
@@ -9,6 +9,8 @@ public class AssignExamCenterCommandValidator : AbstractValidator<AssignExamCent
     {
         RuleFor(x => x.Id).NotEmpty();
         RuleFor(x => x.ExamCenterName).MaximumLength(150).NoHtml();
+        RuleFor(x => x.ExamCenterCode).MaximumLength(30).NoHtml();
+        RuleFor(x => x.TableNumber).MaximumLength(20).NoHtml();
         RuleFor(x => x.CandidateNumber).MaximumLength(20).NoHtml();
     }
 }
